@@ -21,4 +21,5 @@ import org.openqa.selenium.WebDriver;
 
 public interface InteractiveSeleniumHandler {
     public void processDriver(WebDriver driver);
+    public boolean shouldProcessURL(String URL);
 }
